# memorybase

./: .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  prepare_build.py  pyproject.toml  sitemap.xml  start-backend.sh  start-frontend.sh
.github/workflows/: docs.yml  publish.yml  test.yml
api-reference/: index.html
backend/: auth.py  config.py  database.py  main.py  requirements.txt
backend/mcp/: server.py  tools.py
backend/models/: project.py  settings.py  task.py  vault.py
backend/routers/: events.py  projects.py  settings.py  tasks.py  vault.py
backend/services/: event_bus.py
backend/static/: index.html
backend/static/assets/: Dashboard-FT0aeov1.js  KanbanBoard-52kXt3nl.js  ProjectHome-DK5sAjDx.js  Settings-DWBxvJq2.js  VaultExplorer-DMVjPRTq.js  badge-BqIGsEoN.js  card-CoEBDu4B.js  dialog-encCT1Sv.js  dist-B4oUO5os.js  dist-BYwIGLiR.js  index-DBayFDpr.css  index-DKiI0BjW.js  index-NzAOky6E.css  index-skr7xdaV.js  select-_9O6ibWt.js  utils-DJAw43CJ.js
configuration/: index.html
contributing/: index.html
docs/docs/: api-reference.md  configuration.md  contributing.md  getting-started.md  index.md  mcp-tools.md  self-hosting.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  KanbanBoard.tsx  ProjectHome.tsx  Settings.tsx  (+1 more)
getting-started/: index.html
mcp-tools/: index.html
search/: search_index.json
self-hosting/: index.html
tests/: conftest.py  test_api.py
(+6 files in other folders)
