[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdock"
version = "0.1.0"
description = "A self-hosted project and task management server for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "mcp", "task-management", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.19",
    "pydantic-settings>=2.2.1",
    "sse-starlette>=2.1.0",
    "mcp>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
agentdock = "backend.main:cli"

[project.urls]
Homepage = "https://github.com/sabbiramin113008/agentdoc"
Documentation = "https://sabbiramin113008.github.io/agentdoc"
Repository = "https://github.com/sabbiramin113008/agentdoc"
Issues = "https://github.com/sabbiramin113008/agentdoc/issues"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "backend/static"
